--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,10 @@
         <title>Patternlab React Demo</title>
         <!-- TODO: seperate styleguide css -->
         <link rel="stylesheet" href="styleguide/css/styleguide.css" media="all" />
+        <link rel="stylesheet" href="styleguide/css/pattern-scaffolding.css" media="all" />
         <link rel="stylesheet" href="styleguide/css/prism-funky.css" media="all" />
+
+        <link rel="stylesheet" href="styleguide/css/site.css" media="all" /><!-- nb. extra css for styleguide homepage and links, need to improve -->
     </head>
     <body>
         <div id="root"></div>
